# Auditorai

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
auditorai/: __init__.py  monitor.py
auditorai/cli/: __init__.py  main.py
auditorai/utils/: __init__.py  data.py  logging.py
examples/: custom_model_example.py  huggingface_example.py  openai_example.py  pytorch_example.py  sklearn_example.py
src/: auditor_model.py  system.py  utils.py
tests/: test_auditor.py  test_cli.py  test_monitor.py  test_system.py
