[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditorai"
version = "0.2.0"
description = "Universal auditor model that suppresses unreliable AI predictions in human-AI systems. Works with sklearn, PyTorch, HuggingFace, OpenAI, Anthropic, and any custom model."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["machine-learning", "human-ai", "auditor", "uncertainty",
            "prediction-suppression", "sklearn", "pytorch", "huggingface"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
  "scikit-learn>=1.3.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "joblib>=1.3.0",
]

[project.optional-dependencies]
pytorch   = ["torch>=2.0.0"]
hf        = ["transformers>=4.30.0", "torch>=2.0.0"]
openai    = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
all       = ["torch>=2.0.0", "transformers>=4.30.0",
             "openai>=1.0.0", "anthropic>=0.20.0"]
dev       = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]

[project.scripts]
auditorai = "auditorai.cli.main:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/auditor-model"
Repository = "https://github.com/YOUR_USERNAME/auditor-model"
Issues = "https://github.com/YOUR_USERNAME/auditor-model/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["auditorai*"]
